# RustSolver

./: .gitignore  .gitlab-ci.yml  Cargo.toml  PLAN.md  README.md  TASKS.md
.beads/: metadata.json
benchmarks/: collect_rjeans_baselines.py  hu_turn_suite.json  hu_turn_suite_results.json  hu_turn_suite_rjeans_baselines.json  kk_turn_040229_prompt.md  kk_turn_040229_results.json  kk_turn_expanded_combos.txt  run_hu_turn_suite.py  run_kk_turn_compare.py
crates/poker_canon/: Cargo.toml  README.md
crates/poker_canon/src/: deck.rs  hand_indexer.rs  lib.rs
docs/: convergence_schema.md
rust_solver_py/: Cargo.toml  README.md  pyproject.toml
rust_solver_py/src/: lib.rs
scripts/: run_quality_gates.sh  setup.sh
src/: lib.rs
src/gen_abstraction/: ehs.rs  emd.rs  kmeans.rs  main.rs
src/solver/: actions.rs  card_abstraction.rs  cfr.rs  constants.rs  hu_turn_suite_bench.rs  infoset.rs  kk_turn_bench.rs  main.rs  nodes.rs  options.rs  python_api.rs  range_parse.rs  state.rs  tree.rs  tree_builder.rs
src/solver/benchmark/: hu_turn_suite.rs  kk_turn.rs  mod.rs
