[package]
name = "rust_solver"
version = "0.1.0"
authors = ["ruffers9 <kwmurph2@asu.edu>"]
edition = "2018"

[profile.bench]
debug = true

[lib]
name = "rust_solver"
path = "src/lib.rs"

[[bin]]
name = "solver"
path = "src/solver/main.rs"

[[bin]]
name = "kk_turn_bench"
path = "src/solver/kk_turn_bench.rs"

[[bin]]
name = "gen_abstraction"
path = "src/gen_abstraction/main.rs"

[dependencies]
rust_poker = "0.1.5"
crossbeam = "0.7.3"
rayon = "1.0.1"
bytepack = "0.4.1"
byteorder = "1.3.4"
rand = { version = "0.7", features = ["small_rng"] }
combine = "4.2.1"
hashbrown = "0.8.0"
serde_json = "1.0"

[patch.crates-io]
# Local fork of rust_poker 0.1.5 with patches for:
# - removed nightly `#![feature(test)]` gate
# - replaced buggy `lazy_static!` 1.5.0 with thread-safe `OnceLock`
# - exposed `init_cards()` helper to pre-initialize lookup tables
# - read offset_table.dat from a runtime-derivable path
# See README.md and TASKS.md (P0.5c) for the upstream issues.
rust_poker = { path = "vendor/rust_poker" }