[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "rust_solver_py"
version = "0.1.0"
requires-python = ">=3.10"
description = "MCCFR postflop solver (drop-in for solver_ext turn decisions)"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "rust_solver_py"
